# agentic-ai

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: AI_Concepts.md  Calling_LLM_APIs.md  Context_Engineering.md  LCEL.md  LLM_Engineering.md  LLM_Providers.md  Loaders.md  Parsers.md  Prompt_Engineering.md  Splitters.md  ollama.md
docs/syllabus/: agentic-ai-engineer-syllabus-Jul-2026.html  agentic-ai-engineer-syllabus.md
src/concepts/: 01_direct_calls.py  02_streaming.py  03_retries.py  04_rate_limits.py  05_token_counting.py  06_cost_estimation.py
