[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.118.0",
    "google-genai>=2.13.0",
    "groq>=1.5.0",
    "openai>=2.47.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
