[project]
name = "agentic-ai"
version = "0.1.0"
description = "Generative AI and Agentic AI with LLM Engineering"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.118.0",
    "google-genai>=2.13.0",
    "groq>=1.5.0",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.5.0",
    "langchain-google-genai>=4.3.1",
    "langchain-openai>=1.4.0",
    "langgraph>=1.2.9",
    "openai>=2.47.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
